--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,39 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@custom-variant dark (&:is(.dark *));
+
+@theme {
+  --color-emerald: #10b981;
+
+  --shadow-mlight: 25px 25px 0px 5px #e5e7eb;
+  --shadow-mdark: 25px 25px 0px 5px #374151;
+  --shadow-mlightphone: 0px 25px 0px 8px #e5e7eb;
+  --shadow-mdarkphone: 0px 25px 0px 8px #374151;
+
+  --font-krona: KronaOne;
+}
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+
+  button:hover, a:hover {
+    cursor: pointer;
+  }
+}
 
 @font-face {
     font-family: 'KronaOne';
